# py-setowire

./: chat.py  pyproject.toml  swarm.py
py_setowire.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
setowire/: __init__.py
